--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d deploy"
+    "deploy": "gh-pages -d deploy",
+    "deploygh":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
